force-app/main/default/objects/Contact/fields/Hour_rate__c.field-meta.xml
<CustomField>
    <fullName>Hour_rate__c</fullName>
    <description>The price charge per hour for a project</description>
    <label>Hour rate</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>