force-app/main/default/objects/Contact/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sr. Salesforce Developer</fullName>
            </value>
            <value>
                <fullName>Salesforce Developer</fullName>
            </value>
            <value>
                <fullName>React JS Engineer</fullName>
            </value>
            <value>
                <fullName>Android Developer</fullName>
            </value>
            <value>
                <fullName>IoT Engineer</fullName>
            </value>
            <value>
                <fullName>Software developer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>